--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "nyacore-autosplitter"
-version.workspace = true
-edition.workspace = true
-authors.workspace = true
-license.workspace = true
+version = "0.1.0"
+edition = "2021"
+authors = ["HitCounter Contributors"]
+license = "MIT OR Apache-2.0"
 description = "Memory-based autosplitter for FromSoftware games"
-repository = "https://github.com/valkyaha/HitCounter"
+repository = "https://github.com/valkyaha/nyacore-autosplitter"
 
 [features]
 default = []
@@ -13,10 +13,10 @@ vision = ["dep:image", "dep:imageproc"]
 
 [dependencies]
 # Core
-log.workspace = true
-thiserror.workspace = true
-serde = { workspace = true }
-serde_json.workspace = true
+log = "0.4"
+thiserror = "1.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 
 # Async/threading
 parking_lot = "0.12"
@@ -38,4 +38,4 @@ image = { version = "0.25", optional = true }
 imageproc = { version = "0.25", optional = true }
 
 [dev-dependencies]
-env_logger.workspace = true
+env_logger = "0.11"
