Add multi-engine autosplitter system
Introduces a pluggable engine architecture that allows games to define
their autosplitter logic using different approaches:

- AlgorithmEngine: Built-in algorithms (CategoryDecomposition, BinaryTree,
  OffsetTable, KillCounter) based on LiveSplit's implementations
- RhaiEngine: Custom scripting using the Rhai language for game-specific logic
- AslEngine: LiveSplit ASL script compatibility for existing scripts

This enables ANY game to use the autosplitter via configuration and/or
scripts in NYA-Core-Assets, without requiring Rust code changes.

Key changes:
- New engines module with Engine trait and EngineContext
- Updated config.rs with engine type selection (algorithm/rhai/asl)
- Added sync feature for rhai to support thread-safe operation
- Added ScriptError variant to AutosplitterError

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,12 +4,13 @@ version = "0.1.0"
 edition = "2021"
 authors = ["HitCounter Contributors"]
 license = "MIT OR Apache-2.0"
-description = "Memory-based autosplitter for FromSoftware games"
+description = "Generic memory-based autosplitter engine with support for algorithms, Rhai scripting, and LiveSplit ASL"
 repository = "https://github.com/valkyaha/nyacore-autosplitter"
 
 [features]
-default = []
+default = ["rhai-scripting"]
 vision = ["dep:image", "dep:imageproc"]
+rhai-scripting = ["dep:rhai"]
 
 [dependencies]
 # Core
@@ -18,6 +19,9 @@ thiserror = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 toml = "0.8"
+
+# Scripting
+rhai = { version = "1.19", features = ["sync"], optional = true }
 
 # Async/threading
 parking_lot = "0.12"
