--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,9 +22,7 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Setup Rust
-      uses: dtolnay/rust-action@stable
-      with:
-        toolchain: stable
+      uses: dtolnay/rust-toolchain@stable
 
     - name: Build Release
       run: cargo build --release
